# BrainLike

./: CMakeLists.txt  README.md
Test/: CMakeLists.txt  TestMain.cpp
include/: Retina.h  test.h
src/: CMakeLists.txt  Retina.cpp  library.cpp
